[gd_scene load_steps=9 format=2]

[ext_resource path="res://Components/Tablet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/Credits.gd" type="Script" id=2]
[ext_resource path="res://Source/Tablet.tres" type="Theme" id=3]
[ext_resource path="res://Source/CRT.tres" type="Material" id=4]
[ext_resource path="res://Art/Backgrounds/Filter.png" type="Texture" id=5]
[ext_resource path="res://Components/Cursor.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 200 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "roll"
length = 40.0
tracks/0/type = "value"
tracks/0/path = NodePath("Text:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 40 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 200 ), Vector2( 7, -1183 ) ]
}

[node name="world" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 200.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 7.0
margin_top = 200.0
margin_right = 293.0
margin_bottom = 1383.0
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]
{species}/8 new species discovered

Ending {ending}/4









AUDIO

Rockslide: DenseCrunchRe-rated_CaveIn.wav  by zimbot(CC-BY 4.0)

Tinnitus: Tinnitus sound by Breviceps (CC0)
 
Heartbeat: Heartbeat. by urupin(CC-BY 4.0)

Commander O'Cuill voice: Simulated Spanish radio commercial by OneiroidState(CC0)

Radio Static: NOISEshort.wav by ReadeOnly(CC0)

Dr. Sanghera voice: French Canadian Woman Giving Instructions 03.wav by vero.marengere(CC0)

Pick Up Item: Pickup_item1.mp3 by Defaultv(CC0)

Place Down Item: Rustling fabric by NachtmahrTV

Waterfall Sounds: Small waterfall in mountain forest.WAV by BonnyOrbit(CC0)

Cave Sounds: Cave .mp3 by Beussa(CC0)

Splash: water splash 2 by swordofkings128 (CC0)


FONTS

Tablet Font: Dogica by Roberto Mocci(Open Font License)

Strikethrough font:  Dogica by Roberto Mocci, edited by        	(Open Font License)
   
Dialogue Font: Basis33 by Manchson(MIT)

 
CODE

Filter: VHS and CRT monitor effect by pend00(CC0)

Foliage Shader: 2D wind sway by godotshaders(CC0)

Highlight Palatteswap: Palette Swap (no recolor / recolor) by Exuin(CC0)

All other code by     	 


ART

All art by    	 






Happy Holidays 2023,

Guaire :)
[/center]
"
text = "
{species}/8 new species discovered

Ending {ending}/4









AUDIO

Rockslide: DenseCrunchRe-rated_CaveIn.wav  by zimbot(CC-BY 4.0)

Tinnitus: Tinnitus sound by Breviceps (CC0)
 
Heartbeat: Heartbeat. by urupin(CC-BY 4.0)

Commander O'Cuill voice: Simulated Spanish radio commercial by OneiroidState(CC0)

Radio Static: NOISEshort.wav by ReadeOnly(CC0)

Dr. Sanghera voice: French Canadian Woman Giving Instructions 03.wav by vero.marengere(CC0)

Pick Up Item: Pickup_item1.mp3 by Defaultv(CC0)

Place Down Item: Rustling fabric by NachtmahrTV

Waterfall Sounds: Small waterfall in mountain forest.WAV by BonnyOrbit(CC0)

Cave Sounds: Cave .mp3 by Beussa(CC0)

Splash: water splash 2 by swordofkings128 (CC0)


FONTS

Tablet Font: Dogica by Roberto Mocci(Open Font License)

Strikethrough font:  Dogica by Roberto Mocci, edited by        	(Open Font License)
   
Dialogue Font: Basis33 by Manchson(MIT)

 
CODE

Filter: VHS and CRT monitor effect by pend00(CC0)

Foliage Shader: 2D wind sway by godotshaders(CC0)

Highlight Palatteswap: Palette Swap (no recolor / recolor) by Exuin(CC0)

All other code by     	 


ART

All art by    	 






Happy Holidays 2023,

Guaire :)

"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tablet" parent="." instance=ExtResource( 1 )]

[node name="speedup" type="TextureButton" parent="."]
visible = false
margin_right = 301.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/roll = SubResource( 2 )

[node name="Filter" type="Sprite" parent="."]
material = ExtResource( 4 )
texture = ExtResource( 5 )
centered = false

[node name="Cursor" parent="." instance=ExtResource( 6 )]

[connection signal="go" from="Tablet" to="." method="_on_Tablet_go"]
[connection signal="button_down" from="speedup" to="." method="_on_speedup_button_down"]
[connection signal="button_up" from="speedup" to="." method="_on_speedup_button_up"]
